# Cache-Visualizer-OS

cache-simulator/: CMakeLists.txt  README.md
cache-simulator/cpp_logic/include/simulator/: Cache.h  CacheHierarchy.h
cache-simulator/cpp_logic/include/simulator/policies/: FifoPolicy.h  IReplacementPolicy.h  LruPolicy.h  MruPolicy.h
cache-simulator/cpp_logic/src/: Bridge.cpp  Cache.cpp  CacheHierarchy.cpp  CacheHierarchy.cpp.disabled  test_main.cpp
cache-simulator/cpp_logic/src/policies/: FifoPolicy.cpp  LruPolicy.cpp  MruPolicy.cpp
cache-simulator/python_gui/: cache_connector.py  main.py
cache-simulator/traces/: trace.txt
